--- a/server/.prettierrc.json
+++ b/server/.prettierrc.json
@@ -1,6 +1,9 @@
 {
+    "$schema": "https://json.schemastore.org/prettierrc",
+    "bracketSameLine": true,
+    "singleQuote": true,
     "trailingComma": "es5",
-    "tabWidth": 4,
-    "semi": true,
-    "singleQuote": true
+    "htmlWhitespaceSensitivity": "strict",
+    "endOfLine": "auto",
+    "printWidth": 250
 }
