--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@nuxt/icon": "^2.1.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.17",
+    "@vueuse/core": "^14.0.0",
     "@vueuse/nuxt": "^14.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
